@@ -12,8 +12,8 @@ Package: zentyal-samba
 Architecture: all
 Pre-Depends: mysql-server, samba4
 Depends: zentyal-core (>= 3.2), zentyal-core (<< 3.3), zentyal-network,
-         zentyal-firewall, zentyal-users (>= 3.2.5), zentyal-dns (>= 3.2.1), rsync, acl,
-         libdate-calc-perl, libnet-dns-perl,
+         zentyal-firewall, zentyal-users (>= 3.2.6), zentyal-dns (>= 3.2.1),
+         libdate-calc-perl, libnet-dns-perl, rsync, acl,
          libauthen-krb5-easy-perl (>= 0.91-1),
          libclamav-client-perl, libnet-ntp-perl, libuuid-perl,
          libfile-libmagic-perl, libsamba-perl (>= 0.10),
